Day_9/static-web-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-page
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-web-page
  template:
    metadata:
      labels:
        app: static-web-page
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
