Day_9/sticky-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sticky-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  rules:
  - host: sticky.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sticky-service
            port:
              number: 80
